<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2myrobot_base</name>
  <version>0.0.0</version>
  <description>R2myrobot Base Package</description>
  <maintainer email="eiraprogram@gmail.com">root</maintainer>
  <license> a </license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
